--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -34,102 +34,102 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/cli": "^6.2.8",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "~6",
+    "@angular/cli": "~6",
+    "@angular/common": "~6",
+    "@angular/compiler": "~6",
+    "@angular/core": "~6",
+    "@angular/forms": "~6",
+    "@angular/http": "~6",
+    "@angular/platform-browser": "~6",
+    "@angular/platform-browser-dynamic": "~6",
+    "@angular/router": "~6",
     "@atlasmap/atlasmap-data-mapper": "1.38.1",
-    "@ng-dynamic-forms/core": "^5.4.6",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
-    "@ngrx/store-devtools": "^6.0.1",
-    "@types/moment": "^2.13.0",
-    "angular2-text-mask": "^9.0.0",
-    "apicurio-design-studio": "^0.2.17",
-    "better-npm-run": "^0.0.15",
-    "bootstrap": "3.3.7",
-    "brace": "^0.11.1",
-    "codemirror": "5.40.0",
-    "core-js": "^2.5.5",
-    "file-saver": "^1.3.3",
-    "freemarker-parser": "^1.1.6",
-    "jquery": "3.1.1",
-    "license-reporter": "^1.2.2",
-    "marked": "^0.5.0",
-    "merge": "^1.2.1",
-    "moment": "^2.20.1",
-    "mustache": "^2.3.2",
-    "ng2-codemirror": "^1.1.3",
+    "@ng-dynamic-forms/core": "~5",
+    "@ngrx/effects": "~6",
+    "@ngrx/store": "~6",
+    "@ngrx/store-devtools": "~6",
+    "@types/moment": "2.13.0",
+    "angular2-text-mask": "9.0.0",
+    "apicurio-design-studio": "0.2.19",
+    "better-npm-run": "0.0.15",
+    "bootstrap": "3.4.0",
+    "brace": "0.11.1",
+    "codemirror": "5.42.2",
+    "core-js": "2.5.5",
+    "file-saver": "1.3.8",
+    "freemarker-parser": "1.1.6",
+    "jquery": "3.2.1",
+    "license-reporter": "1.2.2",
+    "marked": "0.5.2",
+    "merge": "1.2.1",
+    "moment": "2.20.1",
+    "mustache": "3.0.1",
+    "ng2-codemirror": "1.1.3",
     "ng2-file-upload": "1.3.0",
-    "ngx-bootstrap": "^3.0.0",
-    "ngx-chips": "^1.9.2",
-    "oai-ts-commands": "^0.2.48",
-    "oai-ts-core": "^0.2.26",
-    "patternfly": "3.51.2",
-    "patternfly-ng": "^4.5.0",
-    "pluralize": "5.0.0",
-    "postinstall-postinstall": "^2.0.0",
-    "rxjs": "^6.2.0",
-    "snyk": "^1.118.2",
+    "ngx-bootstrap": "3.0.1",
+    "ngx-chips": "1.9.8",
+    "oai-ts-commands": "0.2.59",
+    "oai-ts-core": "0.2.33",
+    "patternfly": "3.59.0",
+    "patternfly-ng": "4.5.1",
+    "pluralize": "1.2.1",
+    "postinstall-postinstall": "2.0.0",
+    "rxjs": "6.3.3",
+    "snyk": "1.119.0",
     "tether": "1.4.0",
     "ts-helpers": "1.1.2",
     "typescript-logging": "0.6.2",
-    "url": "^0.11.0",
-    "velocityjs": "^1.1.3",
-    "yamljs": "^0.3.0",
-    "zone.js": "^0.8.26"
+    "url": "0.11.0",
+    "velocityjs": "1.1.3",
+    "yamljs": "0.3.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/bootstrap": "^3.3.37",
-    "@types/chai-as-promised": "^0.0.29",
-    "@types/core-js": "^0.9.46",
-    "@types/file-saver": "^1.3.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.0",
-    "@types/lodash": "~4.14.62",
-    "@types/node": "7.0.5",
-    "@types/pluralize": "^0.0.28",
-    "@types/tether": "^1.4.3",
+    "@angular-devkit/build-angular": "0.8.8",
+    "@angular/compiler-cli": "~6",
+    "@angular/language-service": "~6",
+    "@types/bootstrap": "3.3.40",
+    "@types/chai-as-promised": "0.0.29",
+    "@types/core-js": "0.9.46",
+    "@types/file-saver": "1.3.1",
+    "@types/jasmine": "2.5.54",
+    "@types/jasminewd2": "2.0.6",
+    "@types/jquery": "3.3.29",
+    "@types/lodash": "4.14.119",
+    "@types/node": "10.12.18",
+    "@types/pluralize": "0.0.28",
+    "@types/tether": "1.4.4",
     "awesome-typescript-loader": "3.1.3",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "codelyzer": "~4.0.1",
-    "fs-extra": "^2.0.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~3.1.3",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "chai": "3.5.0",
+    "chai-as-promised": "6.0.0",
+    "codelyzer": "4.0.2",
+    "fs-extra": "4.0.3",
+    "jasmine-core": "2.6.4",
+    "jasmine-spec-reporter": "4.1.1",
+    "karma": "3.1.4",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.4.3",
+    "karma-jasmine": "1.1.2",
     "karma-junit-reporter": "1.2.0",
     "karma-mocha-reporter": "2.2.3",
-    "my-local-ip": "^1.0.0",
-    "ncp": "^2.0.0",
-    "patch-package": "^5.1.1",
+    "my-local-ip": "1.0.0",
+    "ncp": "2.0.0",
+    "patch-package": "5.1.1",
     "patternfly-sass": "3.23.2",
-    "prettier": "^1.5.2",
-    "puppeteer": "^1.0.0",
-    "rimraf": "^2.6.2",
-    "rxjs-compat": "^6.2.1",
-    "rxjs-tslint": "^0.1.5",
-    "rxjs-tslint-rules": "^4.4.1",
+    "prettier": "1.15.3",
+    "puppeteer": "1.11.0",
+    "rimraf": "2.6.2",
+    "rxjs-compat": "6.3.3",
+    "rxjs-tslint": "0.1.6",
+    "rxjs-tslint-rules": "4.14.3",
     "sass-lint": "1.10.2",
     "sw-precache": "5.0.0",
     "swagger-js-codegen": "1.12.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "2.7.2",
+    "ts-node": "3.2.2",
+    "tslint": "5.7.0",
+    "typescript": "2.9.2",
     "webdriver-manager": "12.0.2"
   },
   "snyk": true
