feat(MastheadNav): convert masthead to pf4

--- a/app/ui/angular.json
+++ b/app/ui/angular.json
@@ -47,6 +47,12 @@
               "node_modules/patternfly/dist/css/patternfly.css",
               "node_modules/patternfly/dist/css/patternfly-additions.css",
               "node_modules/patternfly-ng/dist/css/patternfly-ng.min.css",
+              "node_modules/@patternfly/patternfly-next/patternfly-base.css",
+              "node_modules/@patternfly/patternfly-next/components/Page/page.css",
+              "node_modules/@patternfly/patternfly-next/components/BackgroundImage/background-image.css",
+              "node_modules/@patternfly/patternfly-next/components/Dropdown/dropdown.css",
+              "node_modules/@patternfly/patternfly-next/components/Avatar/avatar.css",
+              "node_modules/@patternfly/patternfly-next/components/Button/button.css",
               "src/styles.scss"
             ],
             "scripts": [
