--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
   "devDependencies": {
     "@commitlint/cli": "^6.1.3",
     "@commitlint/config-conventional": "^6.1.3"
-  }
+  },
+  "dependencies": {}
 }
