fix(#4301): Fix de-duplification of OData consumer results
* Ports filterAlreadySeen configuration property from current camel source

* Bubble up filterAlreadySeen and consumer.backupoffXXX properties to
  allow the user to configure them in syndesis.

--- a/app/connector/odata/pom.xml
+++ b/app/connector/odata/pom.xml
@@ -336,6 +336,11 @@
       <artifactId>jetty-servlet</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
