isolating springboot in the runtime

--- a/app/integration/project-generator/src/test/resources/io/syndesis/integration/project/generator/testGenerateProject/pom.xml
+++ b/app/integration/project-generator/src/test/resources/io/syndesis/integration/project/generator/testGenerateProject/pom.xml
@@ -122,6 +122,11 @@
       <artifactId>integration-runtime</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.syndesis.integration</groupId>
+      <artifactId>integration-runtime-springboot</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
