--- a/app/integration/runtime-springboot/pom.xml
+++ b/app/integration/runtime-springboot/pom.xml
@@ -25,8 +25,8 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>integration-runtime</artifactId>
-  <name>Integration :: Runtime</name>
+  <artifactId>integration-runtime-springboot</artifactId>
+  <name>Integration :: Runtime :: SpringBoot</name>
   <packaging>jar</packaging>
 
 
@@ -34,15 +34,7 @@
     <!-- common -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jdk8</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -61,13 +53,13 @@
     </dependency>
 
     <dependency>
-      <groupId>io.syndesis.extension</groupId>
-      <artifactId>extension-api</artifactId>
+      <groupId>io.syndesis.integration</groupId>
+      <artifactId>integration-component-proxy</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.syndesis.integration</groupId>
-      <artifactId>integration-component-proxy</artifactId>
+      <artifactId>integration-runtime</artifactId>
     </dependency>
 
     <!-- camel -->
@@ -92,11 +84,21 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
+      <artifactId>spring-beans</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
