--- a/app/integration/pom.xml
+++ b/app/integration/pom.xml
@@ -71,6 +71,7 @@
     <module>runtime</module>
     <module>bom</module>
     <module>project-generator</module>
+    <module>runtime-springboot</module>
   </modules>
 
 </project>
