--- a/app/integration/project-generator/src/test/resources/io/syndesis/integration/project/generator/testGenerateTemplateStepProjectDependencies/pom.xml
+++ b/app/integration/project-generator/src/test/resources/io/syndesis/integration/project/generator/testGenerateTemplateStepProjectDependencies/pom.xml
@@ -110,6 +110,11 @@
       <artifactId>integration-runtime</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.syndesis.integration</groupId>
+      <artifactId>integration-runtime-springboot</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
