--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1147,6 +1147,12 @@
 
       <dependency>
         <groupId>io.syndesis.server</groupId>
+        <artifactId>server-runtime-springboot</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.syndesis.server</groupId>
         <artifactId>server-verifier</artifactId>
         <version>${project.version}</version>
       </dependency>
