--- a/app/meta/pom.xml
+++ b/app/meta/pom.xml
@@ -176,6 +176,23 @@
       <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
     </dependency>
 
+    <!-- === Micrometer ================================================================== -->
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-spring-legacy</artifactId>
+    </dependency>
+
     <!-- === Connectors ================================================================== -->
 
     <dependency>
