--- a/app/pom.xml
+++ b/app/pom.xml
@@ -124,6 +124,7 @@
     <jdbi.version>2.78</jdbi.version>
     <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
     <logback.version>1.2.3</logback.version>
+    <micrometer.version>1.1.2</micrometer.version>
   </properties>
 
   <modules>
@@ -2082,6 +2083,27 @@
         <version>2.5.1</version>
         <scope>test</scope>
       </dependency>
+
+    <!-- Micrometer -->
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+      <version>${micrometer.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>${micrometer.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-spring-legacy</artifactId>
+      <version>${micrometer.version}</version>
+      <scope>runtime</scope>
+    </dependency>
 
       <!-- ::::::::::: test :::::::::::: -->
 
