fix(server): Monitoring - Instrument Syndesis Server API
fix #4348

--- a/app/server/runtime/pom.xml
+++ b/app/server/runtime/pom.xml
@@ -892,6 +892,23 @@
       </exclusions>
     </dependency>
 
+    <!-- === Micrometer ================================================================== -->
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-spring-legacy</artifactId>
+    </dependency>
+
   </dependencies>
 
   <profiles>
