--- a/doc/pom.xml
+++ b/doc/pom.xml
@@ -41,6 +41,7 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.7.1</version>
                 <executions>
                     <execution>
                         <phase>process-resources</phase>
