--- a/app/server/endpoint/pom.xml
+++ b/app/server/endpoint/pom.xml
@@ -119,6 +119,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
