feat(newSyndesisLogo): cleaning up autogeneratred files/code.

--- a/install/syndesis-privileged.yml
+++ b/install/syndesis-privileged.yml
@@ -469,10 +469,7 @@ objects:
           "logging": false
         },
         "branding": {
-          "logoWhiteBg": "assets/images/syndesis-logo-svg-white.svg",
-          "logoDarkBg": "assets/images/syndesis-logo-svg-white.svg",
-          "iconWhiteBg": "assets/images/glasses_logo_square.png",
-          "iconDarkBg": "assets/images/glasses_logo_square.png",
+          "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
           "appName": "Syndesis",
           "favicon32": "/favicon-32x32.png",
           "favicon16": "/favicon-16x16.png",
