--- a/app/ui/src/config.json.example
+++ b/app/ui/src/config.json.example
@@ -2,11 +2,8 @@
   "apiEndpoint": "http://localhost:8080/api/v1",
   "mapperEndpoint": "http://localhost:8080/mapper/v1",
   "branding": {
-    "logoWhiteBg": "assets/images/syndesis-logo-svg-white.svg",
-    "logoDarkBg": "assets/images/syndesis-logo-svg-white.svg",
+    "logoDarkBg": "assets/images/syndesis_logo_icon_darkbkg.png",
     "productBuild": false,
-    "iconWhiteBg": "assets/images/glasses_logo_square.png",
-    "iconDarkBg": "assets/images/glasses_logo_square.png",
     "appName": "Syndesis",
     "favicon32": "/favicon-32x32.png",
     "favicon16": "/favicon-16x16.png",
