chore: switch FormBuilder to useFormBuilder custom hook, remove pf3 dependency

--- a/app/ui-react/packages/auto-form/package.json
+++ b/app/ui-react/packages/auto-form/package.json
@@ -80,7 +80,6 @@
     "@patternfly/react-core": "^3.38.1",
     "@patternfly/react-icons": "^3.10.1",
     "@patternfly/react-styles": "^3.3.3",
-    "formik": "^1.5.4",
-    "patternfly-react": "^2.32.2"
+    "formik": "^1.5.4"
   }
 }
